--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="nav-content">
         <div class="logo"><a href="#">Miranda</a></div>
         <label for="check" class="checkbox">
-          <!-- <i class="fa-solid fa-bars"></i> -->
+        <i class="fa-solid fa-bars"></i> 
         </label>
-        <input type="checkbox" name="check" id="check" />
+        <input type="checkbox" name="check" id="check"/>
 
         <ul>
           <li><a href="#"></a>home</li>
