--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
+    <div class="overall-div">  
+      <nav>
       <div class="nav-content">
-        <div class="logo"><a href="#">Miranda</a></div>
+        <div class="logo"><a href="#">Hillary</a></div> 
         <label for="check" class="checkbox">
         <i class="fa-solid fa-bars"></i> 
         </label>
@@ -34,9 +35,10 @@
     <section class="section">
       <div class="section-container">
         <div class="content">
-          <p class="subtitle">hello</p>
-          <h1>
-            I'm <span>Miranda<br /></span>web Developer
+          <p class="subtitle">
+            Hello</p>
+          <h1 class="title">
+            I'm <span>Hillary<br>a</span>  web Developer
           </h1>
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -48,13 +50,15 @@
           </p>
           <div class="action-btns">
             <button class="hire-me">Hire me</button>
-            <button class="porfolio">portfolio</button>
+            <button class="portfolio">portfolio</button>
           </div>
         </div>
         <div class="image">
-          <img src="./images/Miranda.jpg" alt="Miranda" />
+          <img src="./images/Hillary.jpg" alt="Hillary/>
         </div>
       </div>
+      </div>
+
     </section>
   </body>
 </html>
