--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
           <li><a href="#"></a>resume</li>
           <li><a href="#"></a>portfolio</li>
           <li><a href="#"></a>contact</li>
+           <!-- <img src="./images/real youtube logo.jpg" id="logo" alt="logo"> -->
         </ul>
       </div>
+      <!-- <img src="./images/real youtube logo.jpg" id="logo" alt="logo">  -->
+      <div  id="icon"> <i class="fa-solid fa-bars"></i> </div>
     </nav>
     <section class="section">
       <div class="section-container">
@@ -54,11 +57,13 @@
           </div>
         </div>
         <div class="image">
-          <img src="./images/Hillary.jpg" alt="Hillary/>
+          <img src="./images/Miranda.jpg">
         </div>
       </div>
       </div>
 
     </section>
+
+    
   </body>
 </html>
