--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input type="checkbox" name="check" id="check"/>
 
         <ul>
-          <li><a href="#"></a>home</li>
+          <li><a href="#">home</a></li>
           <li><a href="#"></a>about</li>
           <li><a href="#"></a>resume</li>
           <li><a href="#"></a>portfolio</li>
