--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <input type="checkbox" name="check" id="check"/>
 
         <ul>
-          <li><a href="#">home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#"></a>about</li>
           <li><a href="#"></a>resume</li>
           <li><a href="#"></a>portfolio</li>
           <li><a href="#"></a>contact</li>
-           <!-- <img src="./images/real youtube logo.jpg" id="logo" alt="logo"> -->
+          
         </ul>
       </div>
       <!-- <img src="./images/real youtube logo.jpg" id="logo" alt="logo">  -->
