--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p class="subtitle">
             Hello</p>
           <h1 class="title">
-            I'm <span>Hillary<br>a</span>  web Developer
+            I'm <span>Hillary<br>a</span>  Web Developer
           </h1>
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -53,7 +53,7 @@
           </p>
           <div class="action-btns">
             <button class="hire-me">Hire me</button>
-            <button class="portfolio">portfolio</button>
+            <button class="portfolio">Portfolio</button>
           </div>
         </div>
         <div class="image">
