--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">about</a></li>
-          <li><a href="#"></a>resume</li>
+          <li><a href="#">resume</a></li>
           <li><a href="#"></a>portfolio</li>
           <li><a href="#"></a>contact</li>
           
