--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             Dignissimos sapiente accusamus voluptate neque minima recusandae
             consequatur repudiandae, accusantium saepe. Tempora iusto mollitia
             aut accusantium corporis, nesciunt molestiae. Repudiandae recusandae
-            molestias fugit facere natus quas veritatis repellendus ex. Nulla,
-            tenetur nobis.
+            molestias fugit facere natus quas veritatis repellendus.
           </p>
           <div class="action-btns">
             <button class="hire-me">Hire me</button>
