--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">resume</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resume</a></li>
           <li><a href="#"></a>portfolio</li>
           <li><a href="#"></a>contact</li>
           
