--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Resume</a></li>
-          <li><a href="#"></a>portfolio</li>
+          <li><a href="#">portfolio</a></li>
           <li><a href="#"></a>contact</li>
           
         </ul>
