--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Resume</a></li>
           <li><a href="#">Portfolio</a></li>
-          <li><a href="#"></a>contact</li>
+          <li><a href="#">contac</a></li>
         </ul>
-        
+
       </div>
     
       <div  id="icon"> <i class="fa-solid fa-bars"></i> </div>
