--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Resume</a></li>
           <li><a href="#">Portfolio</a></li>
-          <li><a href="#">contac</a></li>
+          <li><a href="#">Contac Me</a></li>
         </ul>
 
       </div>
