--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="section-container">
         <div class="content">
           <p class="subtitle">
-            Hello</p>
+            Hello there!</p>
           <h1 class="title">
             I'm <span>Hillary<br>a</span>  Web Developer
           </h1>
