--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#">About me</a></li>
           <li><a href="#">Resume</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contac Me</a></li>
