--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Dignissimos sapiente accusamus voluptate neque minima recusandae
             consequatur repudiandae, accusantium saepe. Tempora iusto mollitia
-            aut accusantium corporis, nesciunt molestiae.
+            aut accusantium corporis,
           </p>
           <div class="action-btns">
             <button class="hire-me">Hire me</button>
