--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           <p class="subtitle">
             Hello there!</p>
           <h1 class="title">
-            I'm <span>Hillary<br>a</span>  Web Developer
+            I'm <span>Hillary<br>A</span>  Web Developer
           </h1>
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Dignissimos sapiente accusamus voluptate neque minima recusandae
             consequatur repudiandae, accusantium saepe. Tempora iusto mollitia
-            aut accusantium corporis,
+            aut accusantium corporis.
           </p>
           <div class="action-btns">
             <button class="hire-me">Hire me</button>
