--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <div class="section-container">
         <div class="content">
           <p class="subtitle">
-            Hello there!</p>
+            Hello there!!!</p>
           <h1 class="title">
-            I'm <span>Hillary<br>A</span>  Web Developer
+            I'm <span>Hillary<br>A</span>  Web Developer.
           </h1>
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
