--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About Me</a></li>
           <li><a href="#">Resume</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">My Portfolio</a></li>
           <li><a href="#">Contac Me</a></li>
         </ul>
 
