--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About Me</a></li>
-          <li><a href="#">Resume</a></li>
+          <li><a href="#">My Resume</a></li>
           <li><a href="#">My Portfolio</a></li>
           <li><a href="#">Contac Me</a></li>
         </ul>
