--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="section-container">
         <div class="content">
           <p class="subtitle">
-            Hello there!!!</p>
+            Hello there!!</p>
           <h1 class="title">
             I'm <span>Hillary<br>A</span>  Web Developer.
           </h1>
@@ -55,7 +55,7 @@
             <button class="portfolio">Portfolio</button>
           </div>
         </div>
-        
+
         <div class="image">
           <img src="./images/Miranda.jpg">
         </div>
