--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="section-container">
         <div class="content">
           <p class="subtitle">
-            Hello there!</p>
+            Hello there</p>
           <h1 class="title">
             I'm <span>Hillary<br>A</span>  Web Developer.
           </h1>
