--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <p class="description">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Dignissimos sapiente accusamus voluptate neque minima recusandae
-            consequatur repudiandae, accusantium saepe. Tempora iusto mollitia
+            consequatur repudiandae, accusantium saepe. Tempora iusto mollitia.
             aut accusantium corporis.
           </p>
 
