--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Dignissimos sapiente accusamus voluptate neque minima recusandae
             consequatur repudiandae, accusantium saepe. Tempora iusto mollitia.
-            aut accusantium corporis
+            aut accusantium 
           </p>
 
           <div class="action-btns">
