--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="image">
-          <img src="./images/Miranda.jpg">
+          <img src="./images/hillary3.jpg">
         </div>
       </div>
       </div>
